tests/compile_errors/zst_element_fails.rs
use lamellae::channel;

fn main() {
    struct ZST();
    let _ = channel!(ZST, 5);
}
